# quickshare

./: .gitignore  Cargo.toml  LAN_TEST.md  PLAN.md  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
libs/core/: Cargo.toml
libs/core/src/: bundle.rs  compress.rs  crypto.rs  lib.rs  types.rs
libs/core/src/crypto/: mod.rs
libs/core/src/discovery/: mod.rs
libs/core/src/storage/: mod.rs
libs/core/src/transfer/: batch.rs  chunk.rs  mod.rs  receiver.rs  resume.rs  sender.rs
libs/core/src/transport/: config.rs  connection.rs  mod.rs  tcp.rs
libs/core/tests/: speed_test.rs
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/quickshare-ubuntu-latest-v0.2.0/deb/QuickShare_0.2.0_amd64/control/: control  md5sums
src-tauri/quickshare-ubuntu-latest-v0.2.0/deb/QuickShare_0.2.0_amd64/data/usr/share/applications/: QuickShare.desktop
src-tauri/src/: lib.rs  main.rs
src/js/: app.js
src/styles/: app.css
ui_design/stitch_strategic_project_blueprint/modern_minimalist/: DESIGN.md
ui_design/stitch_strategic_project_blueprint/quickshare_1/: code.html
ui_design/stitch_strategic_project_blueprint/quickshare_2/: code.html
ui_design/stitch_strategic_project_blueprint/quickshare_3/: code.html
