[package]
name = "quickshare-cli"
version.workspace = true
edition.workspace = true

[dependencies]
quickshare-core = { path = "../libs/core" }
quinn = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs"] }
rustls = "0.23"
rcgen = "0.13"
sha2 = "0.10"
anyhow = "1"
serde_json = "1"
tracing-subscriber = "0.3"
