[workspace]
[package]
name = "quickshare"
version = "0.1.0"
edition = "2021"

[lib]
name = "quickshare_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
quickshare-core = { path = "../libs/core", features = ["compress"] }
