[package]
name = "quickshare-core"
version.workspace = true
edition.workspace = true

[dependencies]
quinn = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
rustls = "0.23"
rustls-pki-types = "1"
rcgen = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
bytes = "1"

[dev-dependencies]
quinn = "0.11"
rcgen = "0.13"
rustls = "0.23"
rustls-pki-types = "1"
rand = "0.8"
