[package]
name = "quickshare-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
lz4_flex = { version = "0.11", optional = true }

[features]
default = ["compress"]
compress = ["lz4_flex"]

[dev-dependencies]
rand = "0.8"
